@@ -5,6 +5,7 @@
 * Version 0.5.0
 
 - Update arithmetical functions documentation
+- Pointwise addition and multiplication
 - Add congruence documentation
   
 
